--- a/Index2.html
+++ b/Index2.html
@@ -1,3 +1,11 @@
 <div>I am dmiriy</div>
 <div>It kamasutra</div>
+<div></div> <div>heloo mi frend</div>
+<div></div>
+<div></div>
+<div></div>
+<div></div>
+<div></div>
+<div></div>
+<div></div>
 <div></div>
